--- a/src/styles/EventList.css
+++ b/src/styles/EventList.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     z-index: 1000;
+    border-color: transparent;
 }
 
 .event-list-header {
@@ -29,6 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: none;
 }
 
 .no-events-message {
