--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,10 +49,17 @@ html, body {
         z-index: 2000;
     }
 
-    .button-container {
+    .plus-button-container {
         position: absolute;
         bottom: 5%;
         right: 5%;
+        z-index: 2000;
+    }
+
+    .mail-button-container {
+        position: absolute;
+        bottom: 5%;
+        left: 5%;
         z-index: 2000;
     }
 
