--- a/src/styles/FormCard.css
+++ b/src/styles/FormCard.css
@@ -69,6 +69,11 @@
     box-shadow: 2px 2px var(--main-color);
 }
 
+.form-input:disabled {
+    background-color: var(--blue-chip-light);
+    cursor: not-allowed;
+}
+
 .chip-container {
     display: flex;
     flex-wrap: nowrap;
@@ -244,6 +249,10 @@
     width: 100%;
 }
 
+.submit-button:hover.unsubscribe {
+    background-color: var(--red-chip-color);
+    color: var(--font-color-light);
+}
 
 .submit-button:hover {
     transform: translateY(-2px);
