--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,7 +61,7 @@ html, body {
         margin-right: 10px;
     }
 
-    .mail-button-container {
+    .bell-button-container {
         z-index: 2000;
         margin-left: 10px;
     }
